crates/wac-parser/tests/resolution/fail/export-invalid-name.wac
package test:comp;

import f: func();
export f as "INVALID!";